// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css composes 1`] = `
.css-1746rll {
  display: -webkit-box,-moz-box,-ms-flexbox,-webkit-flex,flex;
  justify-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

<div
  className="css-1746rll"
/>
`;

exports[`css composes with objects 1`] = `
.css-v0v3tq {
  display: -webkit-box,-ms-flexbox,flex,block;
  width: 30px;
  height: calc(40vw - 50px);
  justify-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-v0v3tq:hover {
  color: blue;
}

.css-v0v3tq:after {
  content: " ";
  color: red;
}

@media (min-width: 420px) {
  .css-v0v3tq {
    color: green;
  }
}

<div
  className="css-v0v3tq"
/>
`;

exports[`css composes with undefined values 1`] = `
.css-9mu7jm {
  justify-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

<div
  className="css-9mu7jm"
/>
`;

exports[`css handles more than 10 dynamic properties 1`] = `
.css-550542 {
  background: white;
  color: black;
  text-decoration: underline;
  display: block;
  border-radius: 3px;
  padding: 25px;
  width: 500px;
  z-index: 100;
  font-size: 18px;
  text-align: center;
  border: solid 1px red;
}

<div
  className="css-550542"
/>
`;

exports[`css handles objects 1`] = `
.css-xmm9em {
  display: -webkit-box,-ms-flexbox,flex;
}

<div
  className="css-xmm9em"
/>
`;
